# yew_x_twitter_clone

./: Cargo.toml  README.md
src/: api.rs  lib.rs  main.rs  router.rs  store.rs
src/components/: all_posts.rs  create_post.rs  mod.rs  one_post.rs  textarea.rs  title.rs
src/pages/: home.rs  mod.rs  one_post.rs
