[package]
name = "yew_x_twitter_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.13.0", features = ["yew"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
